# libcommute

./: .buildinfo  .clang-format  .clang-format-ignore  .clang-tidy  .travis.yml  CHANGELOG.md  CITATIONS.bib  CMakeLists.txt  README.md  TODO.md  changelog.html  genindex.html  index.html  installation.html  libcommute.pc.in  objects.inv  search.html  searchindex.js  usage.html
.conda/: build.sh  recipe.yaml
.doctrees/: changelog.doctree  environment.pickle  genindex.doctree  index.doctree  installation.doctree  search.doctree  usage.doctree
.doctrees/examples/: heisenberg_chain.doctree  hubbard_holstein_1d.doctree  index.doctree  jaynes_cummings.doctree  kanamori.doctree  n_fermion_sectors.doctree  parametric_loperator.doctree  spin1_heisenberg.doctree  virasoro_algebra.doctree
.doctrees/expression/: expression.doctree  factories.doctree  gamma.doctree  generator.doctree  index.doctree  intro.doctree  monomial.doctree
.doctrees/loperator/: hilbert_space.doctree  index.doctree  intro.doctree  loperator.doctree  monomial_action.doctree  space_partition.doctree  state_vector.doctree
.github/workflows/: build-and-test.yml  build-test-deploy.yml  conda-publish.yml
_sources/: changelog.md.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/examples/: heisenberg_chain.rst.txt  hubbard_holstein_1d.rst.txt  jaynes_cummings.rst.txt  n_fermion_sectors.rst.txt  virasoro_algebra.rst.txt
_sources/expression/: expression.rst.txt  factories.rst.txt  gamma.rst.txt  generator.rst.txt  index.rst.txt  intro.rst.txt  monomial.rst.txt
_sources/loperator/: hilbert_space.rst.txt  index.rst.txt  loperator.rst.txt  monomial_action.rst.txt  space_partition.rst.txt  state_vector.rst.txt
cmake/: FindBreathe.cmake  FindMySTParser.cmake  FindPythonModule.cmake  FindSphinx.cmake  FindSphinxRTDTheme.cmake  StaticAnalysis.cmake  libcommuteConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  conf.py.in  example.rst  index.rst  installation.rst  search.rst  usage.rst
doc/_static/: theme_overrides.css
doc/dsl/: expression.rst  factories.rst  generator.rst  index.rst  intro.rst
doc/ed/: index.rst  intro.rst
doc/examples/: heisenberg_chain.rst  hubbard_holstein_1d.rst  index.rst  jaynes_cummings.rst  kanamori.rst  parametric_loperator.rst  parametric_qoperator.rst  spin1_heisenberg.rst  virasoro_algebra.rst
doc/expression/: expression.rst  factories.rst  gamma.rst  generator.rst  index.rst  intro.rst  monomial.rst
doc/loperator/: hilbert_space.rst  index.rst  intro.rst  loperator.rst  mapped_basis_view.rst  monomial_action.rst  space_partition.rst  state_vector.rst
example/: CMakeLists.txt  exchange_matrix.cpp  heisenberg_chain.cpp
examples/: CMakeLists.txt  exchange_matrix.cpp  gamma.expression.cpp  gamma.hpp  gamma.loperator.cpp  heisenberg_chain.cpp  heisenberg_chain.html  holstein.cpp  hubbard_holstein.cpp  hubbard_holstein_1d.cpp  hubbard_holstein_1d.html  index.html  jaynes_cummings.cpp  jaynes_cummings.html  kanamori.cpp  kanamori.html  n_fermion_sectors.cpp  n_fermion_sectors.html  new_algebra.cpp  parametric_loperator.cpp  parametric_loperator.html  parametric_qoperator.cpp  partition.cpp  spin1_heisenberg.cpp  spin1_heisenberg.html  virasoro_algebra.cpp  virasoro_algebra.html
expression/: expression.html  factories.html  gamma.html  generator.html  index.html  intro.html  monomial.html
include/libcommute/: algebra_ids.hpp  algebra_tags.hpp  expression.hpp  generator.hpp  libcommute.hpp  metafunctions.hpp  scalar_traits.hpp  utility.hpp  version.hpp
include/libcommute/expression/: dyn_indices.hpp  dynamic_indices.hpp  expression.hpp  factories.hpp  factories_dyn.hpp  generator.hpp  generator_boson.hpp  generator_fermion.hpp  generator_spin.hpp  hc.hpp  monomial.hpp  scalar_traits.hpp
include/libcommute/loperator/: bit_ops.hpp  compressed_state_view.hpp  disjoint_sets.hpp  elementary_space.hpp  elementary_space_boson.hpp  elementary_space_fermion.hpp  elementary_space_spin.hpp  es_constructor.hpp  hilbert_space.hpp  loperator.hpp  mapped_basis_view.hpp  monomial_action.hpp  monomial_action_boson.hpp  monomial_action_fermion.hpp  monomial_action_spin.hpp  n_fermion_sector_view.hpp  space_partition.hpp  sparse_state_vector.hpp  state_vector.hpp  state_vector_eigen3.hpp
include/libcommute/qoperator/: basis_space.hpp  basis_space_boson.hpp  basis_space_fermion.hpp  basis_space_spin.hpp  bs_constructor.hpp  disjoint_sets.hpp  elementary_space.hpp  elementary_space_boson.hpp  elementary_space_fermion.hpp  elementary_space_spin.hpp  es_constructor.hpp  hilbert_space.hpp  mapped_basis_view.hpp  monomial_action.hpp  monomial_action_boson.hpp  monomial_action_fermion.hpp  monomial_action_spin.hpp  qoperator.hpp  remapped_basis_view.hpp  space_partition.hpp  sparse_state_vector.hpp  state_vector.hpp
include/libcommute/scalars/: boost_rational.hpp  gmpxx.hpp
loperator/: hilbert_space.html  index.html  intro.html  loperator.html  monomial_action.html  space_partition.html  state_vector.html
test/: CMakeLists.txt  basis_space.cpp  basis_space_dyn.cpp  bit_ops.cpp  boost_rational.cpp  check_ordering.hpp  commutators.cpp  commutators.hpp  compressed_state_view.cpp  disjoint_sets.cpp  dyn_indices.cpp  elementary_space.cpp  elementary_space_dyn.cpp  expression.addition.cpp  expression.const.addition.cpp  expression.const.multiplication.cpp  expression.const.subtraction.cpp  expression.cpp  expression.mixed_arithmetics.cpp  expression.multiplication.cpp  expression.subtraction.cpp  factories.cpp  factories_dyn.cpp  gamma.cpp  gamma.hpp  gamma.loperator.cpp  gamma.qoperator.cpp  generator.cpp  generator_dyn.cpp  gmpxx_scalars.cpp  hc.cpp  hilbert_space.cpp  int_complex.hpp  loperator.cpp  mapped_basis_view.cpp  metafunctions.cpp  monomial.cpp  monomial_action.cpp  monomial_action.hpp  monomial_action_boson.cpp  (+20 more)
test/catch2/: catch2-main.cpp
tools/: git-pre-commit-check-versions  update-copyright-years.sh
